--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 	\input{content/title}
 	\tableofcontents
 	
-	\input{content/abgabe02/01}
+	\input{content/dns/01}
 	
 	\newpage
 	\printbibliography
