--- a/appendix/Literatur.bib
+++ b/appendix/Literatur.bib
@@ -1,12 +1,19 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Patrick Reinke at 2017-10-31 17:14:23 +0100 
+%% Created for Patrick Reinke at 2017-11-13 13:54:10 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{dns,
+	Author = {Hetzner Online GmbH},
+	Date-Added = {2017-11-13 12:46:58 +0000},
+	Date-Modified = {2017-11-13 12:49:40 +0000},
+	Howpublished = {\url{https://wiki.hetzner.de/index.php/DNS-Reverse-DNS}},
+	Title = {DNS-Reverse-DNS}}
 
 @misc{owncloud:install,
 	Author = {ownCloud},
