added the fuckin low source

--- a/appendix/Literatur.bib
+++ b/appendix/Literatur.bib
@@ -1,12 +1,19 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Patrick Reinke at 2017-11-13 13:54:10 +0100 
+%% Created for Patrick Reinke at 2017-11-13 17:17:16 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{telnet:commands,
+	Author = {Microsoft},
+	Date-Added = {2017-11-13 16:15:22 +0000},
+	Date-Modified = {2017-11-13 16:17:16 +0000},
+	Howpublished = {\url{https://technet.microsoft.com/en-us/library/bb491013}},
+	Title = {Telnet commands}}
 
 @misc{dns,
 	Author = {Hetzner Online GmbH},
