--- a/content/dns/03.tex
+++ b/content/dns/03.tex
@@ -58,7 +58,8 @@ Das Ausführen des Programms mit Parametern ist ähnlich einfach wie die vorheri
 \section{Aufgabe 2: c}
 
 \subsection{Aufgabenstellung}
-Uberlegen Sie sich, wie man ermitteln kann, auf welchem Port der Service gestartet wurde! (1 Punkt)
+Uberlegen Sie sich, wie man ermitteln kann, auf welchem Port der Service gestartet wurde! (1 Punkt)
+
 
 \subsection{Vorbereitung}
 Um den Port zu ermitteln muss zunächst einmal das Programm gestartet werden.
@@ -86,7 +87,7 @@ Testen Sie den lokalen Server mit Hilfe der telnet-Anwendung. Sehen Sie dazu den
 
 \subsection{Vorbereitung}
 Ausführliche Inspektion des Quellcodes und starten des Programms \texttt{Zeitansage}.
-Einlesen in die Telnet Dokumentation.
+Einlesen in die Telnet Dokumentation. /cite{telnet:commands }
 
 \subsection{Durchführung}
 Mit gestartetem Java Programm eine Telnet-Verbindung zu \texttt{localhost} herstellen.
@@ -111,7 +112,8 @@ Bei dieser Aufgabe trat folgendes Problem auf: Wenn \texttt{Zeitansage} ohne Par
 
 \subsection{Aufgabenstellung}
 Testen Sie auch die Zeitansage Services der anderen Teilnehmer durch Zugriff auf deren Rechner. Lassen Sie dazu die IP-Adressen anderer Teilnehmer geben und stimmen Sie die verwendeten Ports ab. (1 Punkt)
-Der Standard-Port für den Service ist 13. Probieren Sie diese Konfiguration; was beobachten Sie?
+Der Standard-Port für den Service ist 13. Probieren Sie diese Konfiguration; was beobachten Sie?
+
 
 \subsection{Vorbereitung}
 Programm \texttt{Zeianzeige} ohne Parameter starten. Anderen Client bereithalten um damit eine Telnetanfrage durchzuführen.
