--- a/content/dns/03.tex
+++ b/content/dns/03.tex
@@ -87,7 +87,7 @@ Testen Sie den lokalen Server mit Hilfe der telnet-Anwendung. Sehen Sie dazu den
 
 \subsection{Vorbereitung}
 Ausführliche Inspektion des Quellcodes und starten des Programms \texttt{Zeitansage}.
-Einlesen in die Telnet Dokumentation. /cite{telnet:commands }
+Einlesen in die Telnet Dokumentation /cite{telnet:commands }.
 
 \subsection{Durchführung}
 Mit gestartetem Java Programm eine Telnet-Verbindung zu \texttt{localhost} herstellen.
@@ -126,4 +126,4 @@ telnet 192.168.56.101 9000
 \end{lstlisting}
 
 \subsection{Fazit}
-Siehe da, geht nicht :(
+Die Aufgabe konnten wir nicht lösen, da der "Client" den "Server" zwar per Ping erreichten kann aber die Telnetanfrage nicht ankommt.
