--- a/content/dns/02.tex
+++ b/content/dns/02.tex
@@ -34,3 +34,39 @@ $ netstat [OPTIONEN]
  
 \subsection{Fazit}
 Der \textit{netstat} ist ein simples Kommando und sollte niemanden schwerfallen.
+
+\newpage
+
+\section{Aufgabe 1: g}
+
+\subsection{Aufgabenstellung}
+Starten Sie nun einen Web-Browser. Versuchen Sie eine URL (z.B. www.google.de) zu
+öffnen, so wird eine Netzwerk-Verbindung zwischen Ihrem und dem entfernten Rechner
+aufgebaut, was sich in einer entsprechenden Ausgabe manifestiert. Machen Sie sich mit
+dem Ausgabe-Format vertraut und ermitteln Sie die Adressinformationen (IP-Adresse /
+Port) der Kommunikationspartner bei dem Zugriff auf Google! (1 Punkt)
+
+\subsection{Vorbereitung}
+Für diese Aufgabe muss man sicher vorher mit den Ausgabe-Format vertraut machen.
+
+\subsection{Fazit}
+Wir konnten diese Aufgabe nicht lösen, da wir nicht verstanden haben was mit dem Ausgabe-Format gemeint ist und wie man nur den Zugriff auf Google sehen kann.
+
+\section{Aufgabe 1: h}
+
+\subsection{Aufgabenstellung}
+Der netstat Befehl zeigt auch den Zustand einer Netzwerkverbindung an. Bei einem
+Verbindungsaufbau zwischen Client und Server durchläuft die Verbindung verschiedene
+Zustände. Ist die Verbindung aufgebaut, so ist der Zustand VERBUNDEN (bzw. ESTABLISHED).
+In der Regel werden die Zustände so schnell durchlaufen, dass die Zustände nicht sichtbar
+
+werden. Die Anzeige der Zwischenzustände kann nur über einen Trick sichtbar gemacht:
+versucht man einen Port auf dem Server zu kontaktieren, der von diesem nicht durch eine
+entsprechenden Service unterstützt wird, so wird ein Zwischenzustand sichtbar. Überlegen
+Sie sich einen Aufruf, mit dem Sie den Zwischenzustand beim Versuch eines Verbindungsaufbaus sichtbar machen können! (1 Punkt)
+
+\subsection{Vorbereitung}
+Für diese Aufgabe gibt es keine Vorbereitung.
+
+\subsection{Fazit}
+Wir konnten diese Aufgabe nicht lösen, da wir nicht wissen, wie wir hätten diesen Zwischenstand speichern oder erzeugen können.
