--- a/content/title.tex
+++ b/content/title.tex
@@ -52,7 +52,8 @@ Beteiligte Personen:
 		\hline
 		%
 		 \tabularnewline
-
+		Aufgabe 1 & a, b, c, d, e, f \tabularnewline
+		Aufgabe 2 & a, b, c, d
 		
 	\end{tabular}
 \end{table}
