--- a/content/dns/03.tex
+++ b/content/dns/03.tex
@@ -87,7 +87,7 @@ Testen Sie den lokalen Server mit Hilfe der telnet-Anwendung. Sehen Sie dazu den
 
 \subsection{Vorbereitung}
 Ausführliche Inspektion des Quellcodes und starten des Programms \texttt{Zeitansage}.
-Einlesen in die Telnet Dokumentation /cite{telnet:commands }.
+Einlesen in die Telnet Dokumentation \cite{telnet:commands}.
 
 \subsection{Durchführung}
 Mit gestartetem Java Programm eine Telnet-Verbindung zu \texttt{localhost} herstellen.
