--- a/content/title.tex
+++ b/content/title.tex
@@ -51,10 +51,8 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		 \tabularnewline
 		Aufgabe 1 & a, b, c, d, e, f \tabularnewline
-		Aufgabe 2 & a, b, c, d
-		
+		Aufgabe 2 & a, b, c, d \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
