--- a/content/title.tex
+++ b/content/title.tex
@@ -14,7 +14,7 @@
    \centering
    % Titel
    {\Huge Verteilte Systeme und Kommunikationsnetze} \\
-  Testumgebung \\ \normalsize Praktikum  1
+  eMail \\ \normalsize Praktikum  3
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
