--- a/main.tex
+++ b/main.tex
@@ -11,9 +11,7 @@
 	\input{content/title}
 	\tableofcontents
 	
-	\input{content/dns/01}
-	\input{content/dns/02}
-	\input{content/dns/03}
+	\input{content/email/01}
 	
 	\newpage
 	\printbibliography
