--- a/content/title.tex
+++ b/content/title.tex
@@ -52,7 +52,7 @@ Beteiligte Personen:
 		\hline
 		%
 		Aufgabe 1 & a, b, c, d, e, f \tabularnewline
-		Aufgabe 2 & a, b, c, d \tabularnewline
+		Aufgabe 2 & a, b, c \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
