--- a/main.tex
+++ b/main.tex
@@ -10,8 +10,7 @@
 	\input{content/title}
 	\tableofcontents
 	
-	\input{content/email/01}
-	\input{content/email/02}
+	\input{content/rmi/01}
 	
 	\newpage
 	\printbibliography
