--- a/content/title.tex
+++ b/content/title.tex
@@ -14,7 +14,7 @@
    \centering
    % Titel
    {\Huge Verteilte Systeme und Kommunikationsnetze} \\
-  RMI \\ \normalsize Praktikum  4
+  REST-Services \\ \normalsize Praktikum  5
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
@@ -51,7 +51,8 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		Aufgabe 1 & ja \tabularnewline
+		Aufgabe 1 & a, b, c \tabularnewline
+		Aufgabe 2 & ja \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
