--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 	\input{content/title}
 	\tableofcontents
 	
-	\input{content/rmi/01}
+	\input{content/rest/01}
 	
 	\newpage
 	\printbibliography
