--- a/main.tex
+++ b/main.tex
@@ -21,8 +21,7 @@
 	\input{content/title}
 	\tableofcontents
 	
-	\input{content/rest/01}
-	\input{content/rest/02}
+	\input{content/ref/01}
 	
 	\newpage
 	\printbibliography
