patrick stinkt nach kot

--- a/content/ref/01.tex
+++ b/content/ref/01.tex
@@ -83,7 +83,7 @@ Alle Fragen sind im Stil einer Klausur.
 Entwickeln Sie eine kurze Programmieraufgabe (Frage und Lösung dazu). Diese Aufgabe soll einen Teilbereich Ihrer Wahl aus dem bisher behandelten Vorlesungsstoff abdecken. (2 Punkte)
 
 \subsection{Vorbereitung}
-Für diese Aufgabe muss man sich mit den bisher behandelten Vorlesungsstoff auseinandersetzen. 
+Für diese Aufgabe muss man sich mit den bisher behandelten Vorlesungsstoff auseinandersetzen.
 
 \subsection{Durchführung}
 
@@ -111,11 +111,21 @@ try {
 \subsection{Aufgabenstellung}
 In der Vorlesung Nr. 4 (RMI und REST) wurden mögliche Anforderungen an Middlewaretechnologien
 genannt. Diese finden Sie in der Bewertung zum Thema RMI (Folien 21
-bis 23). Fuhren Sie die dortige Anforderungsanalyse für REST durch. (3 Punkte) 
+bis 23). Fuhren Sie die dortige Anforderungsanalyse für REST durch. (3 Punkte)
 
 \subsection{Vorbereitung}
 Vertraut machen mit der oben genannten Vorlesung.
 
 \subsection{Durchführung}
 \textbf{REST Performance}
-
+\begin{itemize}
+	\item REST basiert auf HTTP
+	\item Minimaler Überhang über HTTP
+	\item REST basiert also auf PUT, GET, POST und DELETE
+	\item Für jeden Service wird also eine URL erzeugt
+	\item Jede Ressource wird über eine logische URL angesprochen
+\end{itemize}
+\textbf{REST Bewertung}
+\begin{itemize}
+	\item Einfach nachvollziehbar da logische Ressourcen
+\end{itemize}
