--- a/content/ref/01.tex
+++ b/content/ref/01.tex
@@ -117,15 +117,49 @@ bis 23). Fuhren Sie die dortige Anforderungsanalyse für REST durch. (3 Punkte)
 Vertraut machen mit der oben genannten Vorlesung.
 
 \subsection{Durchführung}
-\textbf{REST Performance}
+\subsection{REST Performance}
 \begin{itemize}
 	\item REST basiert auf HTTP
 	\item Minimaler Überhang über HTTP
 	\item REST basiert also auf PUT, GET, POST und DELETE
 	\item Für jeden Service wird also eine URL erzeugt
 	\item Jede Ressource wird über eine logische URL angesprochen
+	\item Wichtigster Einfluss auf die Performance ist die Cachefähigkeit
 \end{itemize}
-\textbf{REST Bewertung}
+
+\subsection{REST Bewertung}
+\textbf{Anforderung "Netzwerkunabhängigkeit"}
 \begin{itemize}
-	\item Einfach nachvollziehbar da logische Ressourcen
+	\item Clients und Server sollten ohne Änderungen auf unterschiedlichen Netzwerktypen arbeiten können.
+\end{itemize}
+Bewertung REST:
+\begin{itemize}
+	\item REST beruht auf HTTP und kann daher mit TCP/IP umgehen
+\end{itemize}
+
+\textbf{Anforderung "Rechner-/Betriebssystem-Portabilität":}
+\begin{itemize}
+	\item Clients und Server sollten ohne Änderungen (außer ggf. Neukompilierung) mit verschiedenen Rechnern und Betriebssystemen arbeiten.
+\end{itemize}
+Bewertung REST:
+\begin{itemize}
+	\item REST ist mit jedem HTTP-fähigen Client kompatibel
+\end{itemize}
+
+\textbf{Anforderung "Portabilität bezüglich der Programmiersprache":}
+\begin{itemize}
+	\item Clients und Server sollen sich verstehen, auch wenn sie mit unterschiedlichen Programmiersprachen entwickelt wurden.
+\end{itemize}
+Bewertung REST:
+\begin{itemize}
+	\item Nicht auf Programmiersprachen beschränkt
+\end{itemize}
+
+\textbf{Anforderung "Transparente Nutzung":}
+\begin{itemize}
+	\item Programmierer sollen Dienste auf entfernten Rechnern wie lokale Operationen (Transparenz) nutzen können.
+\end{itemize}
+Bewertung REST:
+\begin{itemize}
+	\item Weitestgehend transparent dank nachvollziehbarer und logischer Ressourcen
 \end{itemize}
