--- a/content/title.tex
+++ b/content/title.tex
@@ -14,7 +14,7 @@
    \centering
    % Titel
    {\Huge Verteilte Systeme und Kommunikationsnetze} \\
-  REST-Services \\ \normalsize Praktikum  5
+  Reflektion \\ \normalsize Praktikum 6
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
@@ -51,8 +51,7 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		Aufgabe 1 & a, b, c \tabularnewline
-		Aufgabe 2 & ja \tabularnewline
+		Aufgabe 1 & a, b, c, d, e \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
