--- a/main.tex
+++ b/main.tex
@@ -20,8 +20,7 @@
 	\input{content/title}
 	\tableofcontents
 
-	\input{content/wireshark/01}
-  \input{content/wireshark/03}
+	\input{content/firewall/01}
 
 	\newpage
 	\printbibliography
