fixed martis code

--- a/content/title.tex
+++ b/content/title.tex
@@ -14,7 +14,7 @@
    \centering
    % Titel
    {\Huge Verteilte Systeme und Kommunikationsnetze} \\
-  TCP/UDP \\ \normalsize Praktikum 7
+  Firewall \\ \normalsize Praktikum 9
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
@@ -51,7 +51,9 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		Aufgabe 1 & a,b \tabularnewline
+		Aufgabe 1 & a,b,c,d \tabularnewline
+		Aufgabe 2 & a,b,c,d,e \tabularnewline
+		Aufgabe 3 & a,b,c,d,e \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
