--- a/content/wireshark/01.tex
+++ b/content/wireshark/01.tex
@@ -84,3 +84,6 @@ Der Server sendet ihm die Daten solange zu bis diese fertig gesendet wurden und 
 	\includegraphics[width=0.6 \linewidth]{images/w10}
 	\caption{FINISH-Response} \label{ordner}
 \end{figure} 
+
+\subsection{Fazit}
+Die Aufgabe hat keine Probleme gemacht außer der Info Dialog, den wir unter MacOS nicht anzeigen lassen.
