--- a/content/title.tex
+++ b/content/title.tex
@@ -51,9 +51,7 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		Aufgabe 1 & a,b,c,d \tabularnewline
-		Aufgabe 2 & a,b,c,d,e \tabularnewline
-		Aufgabe 3 & a,b,c,d,e \tabularnewline
+		Aufgabe 1 & a,b,c,d,e,f,g \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
