--- a/content/firewall/01.tex
+++ b/content/firewall/01.tex
@@ -136,7 +136,7 @@ Wir scannen als erstes die Ports:
 \begin{lstlisting}
 hping3 -V -S 192.168.56.102 -p -scan 0-100 -i u550000
 \end{lstlisting}
-Die eingestellte Wartezeit zwischen den Paketen (0.55 Sekunden) sorgt dafür, dass der Scan von den in der vorherigen erstellten Regeln nicht wirken.
+Die eingestellte Wartezeit zwischen den Paketen (0.55 Sekunden) sorgt dafür, dass der Scan von den in der vorherigen erstellten Regeln nicht wirken, geöffnete Ports sieht man an dem S- und A-Flag, welcher der Port 13 ist.
 
 \subsection{Fazit}
 Diese Aufgabe hatte keine Probleme.
