--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,10 @@
 	\input{content/title}
 	\tableofcontents
 
-	\input{content/firewall/01}
+	\input{content/ipv6/01}
+	\input{content/ipv6/02}
+	\input{content/ipv6/03}
+	\input{content/ipv6/04}
 
 	\newpage
 	\printbibliography
