--- a/content/ipv6/01.tex
+++ b/content/ipv6/01.tex
@@ -9,5 +9,6 @@ Beschreiben Sie kurz die Unterschiede, Besonderheiten und/oder auch Neuerungen i
 Für diese Aufgabe muss man sich mit IPv4 und IPv6 auseinandersetzen.
 
 \subsection{Durchführung}
+IPv6 Adressen sind 128 Bit lang, IPv4 hingegen nur 32 Bit. So ergeben sich bei IPv4 4.294.967.296 und bei IPv6 340.282.366.920.938.463.463.374.607.431.768.211.456 verschiedene Adressen. IPv6 hat ein einfacheres Headerformat zur leichteren Zuordnung von Routen und Dienstgütemechanismen(Quality of Service).
 
 \subsection{Fazit}
