--- a/content/title.tex
+++ b/content/title.tex
@@ -14,7 +14,7 @@
    \centering
    % Titel
    {\Huge Verteilte Systeme und Kommunikationsnetze} \\
-  Firewall \\ \normalsize Praktikum 9
+  IPv6 \\ \normalsize Praktikum 10
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
@@ -51,7 +51,10 @@ Beteiligte Personen:
 		\textbf{Gelöst} \tabularnewline
 		\hline
 		%
-		Aufgabe 1 & a,b,c,d,e,f,g \tabularnewline
+		Aufgabe 1 & ja \tabularnewline
+		Aufgabe 2 & a,b,c,d,e,f \tabularnewline
+		Aufgabe 3 & a,b,c,d,e \tabularnewline
+		Aufgabe 4 & a,b \tabularnewline
 	\end{tabular}
 \end{table}
    \noindent\rule{15cm}{0.4pt}
