--- a/content/ipv6/03.tex
+++ b/content/ipv6/03.tex
@@ -20,7 +20,8 @@ Nachdem Sie sich mit dem Adressaufbau von IPv6 befasst haben, recherchieren Sie 
 Für diese Aufgabe müssen wir uns mit \textbf{IPv6} auseinandersetzen.
 
 \subsection{Durchführung}
-a) Adressbereiche:
+\subsubsection{a)}
+Adressbereiche:
 \begin{itemize}
 \item 0:0:0:0:0:ffff::/96 IPv4 mapped IPv6 Adressen. Verbindet "die alte Welt mit der neuen".
 \item 2000::/3 sind von der IANA(Internet Assigned Numbers Authority) vergebene Adressen.
@@ -28,9 +29,11 @@ a) Adressbereiche:
 \item Mit 2003 beginende Adressen werden von der RIR(Regional Internet Registry) vergeben.
 \end{itemize}
 
-b) Eine Unique Local Unicast Adresse ist vergleichbar mit den im eingenen Netzwerk (LAN) verteilten Adressen.
+\subsubsection{b)}
+Eine Unique Local Unicast Adresse ist vergleichbar mit den im eingenen Netzwerk (LAN) verteilten Adressen.
 
-c) Eine Link Local Adresse beginnt mit fe80:: oder febf::.
+\subsubsection{c)}
+Eine Link Local Adresse beginnt mit fe80:: oder febf::.
 
 Es folgt ein Beispiel für eine Link Local Adresse:
 \begin{lstlisting}
@@ -39,9 +42,11 @@ Es folgt ein Beispiel für eine Link Local Adresse:
 
 Eine Link Local Adresse ist nur im LAN erreichbar, wird also nicht vom Router weitergeleitet.
 
-d) Mit ff01::2,ff02::2 und ff05::2 können alle Router in einem Netzwerksegment angesprochen werden.
+\subsubsection{d)}
+Mit ff01::2,ff02::2 und ff05::2 können alle Router in einem Netzwerksegment angesprochen werden.
 
-e)MAC-Adresse: 08:00:27:45:a0:aa
+\subsubsection{e)}
+MAC-Adresse: 08:00:27:45:a0:aa
 Adressbereich (Subnetz): 2001:0db8:a513:8701:0:0:0:0 - 2001:0db8:a513:8701:ffff:ffff:ffff:ffff
 Globale Multicast Adresse
 
